--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -1,6 +1,6 @@
-description=Persian analyzer for elasticsearch.
+description=Persian analyzer for opensearch.
 version=1.0
 name=ParsiAnalyzer
 classname=org.elasticsearch.analyzer.ParsiAnalyzerPlugin
 java.version=1.8
-elasticsearch.version=7.13.1
+opensearch.version=7.13.1
